2008-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (SpreadImage): Offsets array size is a prime
	number to help avoid beating.
	(SpreadImage): Ensure that spread loops are always terminal.
	* magick/utility.c (MagickRandReentrant): Fix bug where rand() was
	being continually re-seeded if rand_r() was not available.

2008-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/msl_composite.sh: Replace SVG image generation
	with simpler approach which properly centers the text.  Use our
	own font so that tests will pass if the user does not have fonts
	installed.
	* magick/utility.c (GetMagickDimension): Extend to support parsing
	optional x and y offset values and use to fix parsing for
	-oil-paint and -unsharp when sscanf() is C'99 compliant.

2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.h (AcquireOneCacheViewPixel): Pass pixel to
	update by reference.
	(AcquireOnePixelByReference): New private inline method which
	passes pixel to update by reference.
	* magick/omp_thread_view.h (AcquireOneThreadViewPixel): Pass pixel
	to update by reference.
	* magick/alpha_composite.h (BlendCompositePixel): Replace
	BlendComposite with BlendCompositePixel, which passes the
	composite pixel by reference.
	(AlphaCompositePixel): Replace AlphaComposite with
	AlphaCompositePixel, which passes the composite pixel by
	reference.
	(AtopCompositePixel): Replace AtopComposite with
	AtopCompositePixel, which passes the composite pixel by reference.
	* configure.ac: With excessive maintenance releases, the library
	age portion of MAGICK_LIB_VERSION was overflowing its allotted
	space.  This resulted in 1.1.X releases reporting the wrong
	MagickLibVersion as of 1.1.10.  Fix this by supporting up to 99
	values for each field.

2008-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix passing the --with-windows-font-dir option via
	DISTCHECK_CONFIG_FLAGS.