@@ -24,6 +24,8 @@
 2008-11-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/command.c (BenchmarkImageCommand): With no other
+        arguments, the benchmark command now defaults to one iteration.
   <LI> magick/effect.c (SpreadImage): Offsets array size is a prime
         number to help avoid beating.<BR>
         (SpreadImage): Ensure that spread loops are always terminal.
